--- a/frontend/src/components/AuthForm.css
+++ b/frontend/src/components/AuthForm.css
@@ -83,12 +83,14 @@
     filter: drop-shadow(0px 1px 0px #efefef)
       drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+    background-color: white;
+    color: black;
   }
   
   .input_field:focus {
     border: 1px solid transparent;
     box-shadow: 0px 0px 0px 2px #242424;
-    background-color: transparent;
+    /* background-color: transparent; */
   }
   
   .sign-in_btn {
@@ -142,4 +144,12 @@
     font-size: 0.75rem;
     color: #8B8E98;
     text-decoration: underline;
+  }
+
+  .switch_text{
+    color:black;
+  }
+  .switch_link{
+    text-decoration: underline;
+    color: blue;
   }
