--- a/frontend/src/components/VerifyOtp.css
+++ b/frontend/src/components/VerifyOtp.css
@@ -1,54 +1,104 @@
-/* From Uiverse.io by Yaya12085 */ 
-.form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 350px;
-    background-color: white;
-    border-radius: 12px;
-    padding: 20px;
-    border: 1px solid rgb(138, 138, 250);
-  }
-  
-  .title {
-    font-size: 20px;
-    font-weight: bold;
-    color: black
-  }
-  
-  .message {
-    color: #a3a3a3;
-    font-size: 14px;
-    margin-top: 4px;
-    text-align: center
-  }
-  
-  .inputs {
-    margin-top: 10px
-  }
-  
-  .inputs input {
-    width: 32px;
-    height: 32px;
-    text-align: center;
-    border: none;
-    border-bottom: 1.5px solid #d2d2d2;
-    margin: 0 10px;
-  }
-  
-  .inputs input:focus {
-    border-bottom: 1.5px solid royalblue;
-    outline: none;
-  }
-  
-  .action {
-    margin-top: 24px;
-    padding: 12px 16px;
-    border-radius: 8px;
-    border: none;
-    background-color: royalblue;
-    color: white;
-    cursor: pointer;
-    align-self: end;
-  }
+.otp-Form {
+  max-width: 360px;
+  height: auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px 20px;
+  gap: 18px;
+  position: relative;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.mainHeading {
+  font-size: 1.2em;
+  color: #111;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.otpSubheading {
+  font-size: 0.75em;
+  color: #555;
+  text-align: center;
+  line-height: 1.4;
+  margin-bottom: 10px;
+}
+
+.input-Container {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  width: 100%;
+}
+
+.otp-input {
+  max-width: 38px;
+  height: 45px;
+  font-size: 1.1em;
+  text-align: center;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: #f3f3f3;
+  color: #000;
+  outline: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+.otp-input:focus {
+  background-color: #dbe1ff;
+  border-color: #7f81ff;
+}
+
+.verifyButton {
+  width: 100%;
+  height: 40px;
+  border: none;
+  background-color: #7f81ff;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background 0.2s ease;
+}
+
+.verifyButton:hover {
+  background-color: #9091ff;
+}
+
+.exitBtn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: white;
+  border: none;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  font-size: 1.1em;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);
+}
+
+.resendNote {
+  font-size: 0.75em;
+  color: #333;
+  text-align: center;
+}
+
+.resendBtn {
+  background: none;
+  border: none;
+  color: #7f81ff;
+  font-size: 1em;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 0;
+  margin-top: 4px;
+  text-decoration: underline;
+}
